fix(data-1160): bug where GBFS subscriptions would not be updated properly and deleted properly by ISHTAR
* merge feed providers from ISHTAR with feed providers in cache
* when updating a feed provider clear whole REDIS cache for this provider
* restart all feed provider subscriptions if any feed provider has been updated or deleted
* every 5 minutes retrieve feed providers from ISHTAR
* retrieve GBFS subscriptions from YML files by default